objects/ASI_MFM_Tax_Code__c.object
<CustomObject>
    <description>Tax Code Master for MFM use</description>
    <fields>
        <fullName>ASI_MFM_BC_Code__c</fullName>
        <label>BC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Description_in_KOR__c</fullName>
        <label>Description in KOR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Manual_Input__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SAP_Code__c</fullName>
        <label>SAP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Expl_Code__c</fullName>
        <label>Tax Expl Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_VAT_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>VAT Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Withholding_Tax_Rate__c</fullName>
        <label>Withholding Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Tax Code</label>
    <listViews>
        <fullName>ASI_MFM_JP</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_VAT_Rate__c</columns>
        <columns>ASI_MFM_BC_Code__c</columns>
        <columns>ASI_MFM_Default__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Tax_Code__c.ASI_MFM_JP_Tax_Code</value>
        </filters>
        <label>ASI MFM JP</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_JP</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_KR</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Tax_Expl_Code__c</columns>
        <columns>ASI_MFM_VAT_Rate__c</columns>
        <columns>ASI_MFM_Description__c</columns>
        <columns>ASI_MFM_Description_in_KOR__c</columns>
        <columns>ASI_MFM_Remark__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Tax_Code__c.ASI_MFM_KR_Tax_Code</value>
        </filters>
        <label>ASI MFM KR</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_TH_1</fullName>
        <columns>NAME</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Description__c</columns>
        <columns>ASI_MFM_Withholding_Tax_Rate__c</columns>
        <columns>ASI_MFM_VAT_Rate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Tax_Code__c.ASI_MFM_TH_Withholding_Tax,ASI_MFM_Tax_Code__c.ASI_CRM_TH_Tax_Code</value>
        </filters>
        <label>ASI MFM TH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Description__c</columns>
        <columns>ASI_MFM_VAT_Rate__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Manual_Input__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Tax_Code__c.ASI_MFM_CN_Tax_Code</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_li</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Description__c</columns>
        <columns>ASI_MFM_VAT_Rate__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Manual_Input__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Tax_Code__c.ASI_MFM_CN_Tax_Code</value>
        </filters>
        <label>All-li</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Tax Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Code</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TH_Tax_Code</fullName>
        <active>true</active>
        <label>TH CRM Tax Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_Tax_Code</fullName>
        <active>true</active>
        <label>CN Tax Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_JP_Tax_Code</fullName>
        <active>true</active>
        <label>JP Tax Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_Tax_Code</fullName>
        <active>true</active>
        <label>KR Tax Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TH_Withholding_Tax</fullName>
        <active>true</active>
        <label>TH Withholding Tax</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_MFM_Check_Default_and_Inactive</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(CONTAINS(RecordType.DeveloperName , &quot;ASI_MFM_KR&quot;),CONTAINS(RecordType.DeveloperName , &quot;ASI_MFM_JP&quot;)) , ASI_MFM_Inactive__c , ASI_MFM_Default__c )</errorConditionFormula>
        <errorMessage>Can not check &apos;Default&apos; and &apos;Inactive&apos; at same time</errorMessage>
    </validationRules>
</CustomObject>